display none farmacia options

--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -186,7 +186,7 @@
                   </div>
 
                   <!-- Farmacia -->
-                  <div
+                  <!-- <div
                     [routerLink]="['.', { outlets: { back: ['farmacia'] } }]"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{ exact: true }"
@@ -201,7 +201,7 @@
                     </svg>
                     <p class="text-[0.5rem] text-center font-semibold"
                       [ngClass]="rlaFarm.isActive ? 'text-cyan-700' : 'text-gray-500'">Farmacia</p>
-                  </div>
+                  </div> -->
 
                   <!-- Evacuaciones -->
                   <div
