--- a/src/app/admin/components/sepelio/sepelio.component.html
+++ b/src/app/admin/components/sepelio/sepelio.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="user()?.Beneficios![0].SeguroVida !==0 || user()?.Beneficios![0].SeguroVida > 0; else elseTemplate">
+<ng-container *ngIf="tieneBeneficio3(); else elseTemplate">
   <p class="text-[0.7rem] text-cyan-600 font-semibold text-center mt-1">Seguros</p>
 <div class="flex flex-col h-24  overflow-hidden mx-4 mt-1 mb-2">
   <div class="overflow-y-auto flex-grow custom-scrollbar">
@@ -18,14 +18,9 @@
         </tr>
       </thead>
       <tbody class="bg-white divide-y divide-gray-200 mb-2">
-        <tr *ngIf="user()?.Beneficios![0].SeguroVida > 0" class="hover:bg-gray-50">
+        <tr *ngIf="tieneBeneficio3()" class="hover:bg-gray-50">
           <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-cyan-600 font-semibold w-[5%]">#</td>
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[30%]">Seguro de vida</td>
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem]  w-[10%]"><p class="bg-green-600 text-center px-1 rounded-2xl text-white">Contratado</p></td>
-        </tr>
-        <tr *ngIf="user()?.Beneficios![0].SeguroSepelio > 0" class="hover:bg-gray-50">
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-cyan-600 font-semibold w-[5%]">#</td>
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[30%]">Seguro de sepelio></td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[30%]">Seguro de sepelio</td>
           <td class="px-3 py-2 whitespace-nowrap text-[0.6rem]   w-[10%] "><p class="bg-green-600 text-center px-1 rounded-2xl text-white">Contratado</p></td>
         </tr>
       </tbody>
