register solutions applied

--- a/src/app/auth/pages/repassword/repassword.component.html
+++ b/src/app/auth/pages/repassword/repassword.component.html
@@ -5,7 +5,7 @@
         <figure>
           <img class="w-30 mb-2" src="cirsub.png" alt="">
         </figure>
-        <form [formGroup]="repasswordForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="repasswordForm">
           <fieldset class="fieldset">
               <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su número de documento</legend>
               <label class="input input-success validator">
