--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -27,4 +27,5 @@
   <aside>
     <p class="text-gray-500">Departamento Informática del Círculo de Suboficiales de Gendarmeria Nacional Argentina</p>
   </aside>
+  <p class="text-gray-400 font-semibold text-[0.7rem]">Versión 1.0.0</p>
 </footer>
