actualizacion de contraseña completada con exito

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -20,7 +20,7 @@
             <input class="text-gray-400" formControlName="password" autocomplete="new-password"  type="password" required placeholder="Password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
             </label>
           </fieldset>
-          <p class="text-left text-gray-400 font-sans mb-5">Olvidó su contraseña? <a routerLink='/auth/register' routerLinkActive="router-link-active"  class="font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Recuperela</a></p>
+          <p class="text-left text-gray-400 font-sans mb-5">Olvidó su contraseña? <a routerLink='/auth/password-reset' routerLinkActive="router-link-active"  class="font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Recuperela</a></p>
           <div class="flex justify-center items-center mb-5">
             <button type="submit" class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">Ingresar</button>
           </div>
