--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -32,13 +32,8 @@
   </div>
 </section>
 
-@if (hasError()) {
-  <div role="alert" class="alert alert-error animate__fadeInRight fixed bottom-5 right-5">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-    </svg>
-    <span>Por favor revise la informacion ingresada</span>
-  </div>
-}
+
+  <p-toast position="bottom-center" styleClass="toast-error" class="w-[90%]"/>
+
 
 
