--- a/src/app/auth/pages/passrecovery/passrecovery.component.html
+++ b/src/app/auth/pages/passrecovery/passrecovery.component.html
@@ -97,12 +97,12 @@
             </div>
 
             <div class="flex justify-center items-center mb-5 mt-5">
-              <button type="submit" class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">
+              <button (click)="focusInput()" type="submit" class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">
                 siguiente
               </button>
             </div>
           </form>
-          <div *ngIf="!visible && !repass && !avatar" class="card-body">
+          <div *ngIf="!visible && !repass && !avatar && showOtp" class="card-body">
 
             <form [formGroup]="formOtp" (ngSubmit)="sendOtp()" class="flex flex-col items-center gap-8">
 
@@ -268,4 +268,4 @@
   </form>
 </dialog>
 
-<p-toast position="bottom-center" styleClass="toast-white"/>
+<p-toast position="bottom-center" styleClass="toast-white" />
