--- a/src/app/admin/components/grupo-familiar/grupo-familiar.component.html
+++ b/src/app/admin/components/grupo-familiar/grupo-familiar.component.html
@@ -23,7 +23,7 @@
           <td class="px-3 py-2 whitespace-nowrap text-[0.5rem] text-gray-600 w-[20%]">{{familiar.Tipo_Parentesco_Detalle}}</td>
           <td class="px-3 py-2 text-[0.5rem] text-gray-600  w-[40%]">{{familiar.Nombre}}</td>
           <td class="px-3 py-2 whitespace-nowrap text-[0.5rem] text-gray-500 w-[25%]">{{familiar.Documento}}</td>
-          <td *ngIf="familiar.Discapacitado==='SI'" class="w-[10%]">
+          <td *ngIf="familiar.discapacidato_Id !== null" class="w-[10%]">
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 24 24"><g fill="none" stroke="#25D366" stroke-width="1.5"><circle cx="12" cy="12" r="10"/><path d="M14 7a2 2 0 1 1-4 0a2 2 0 0 1 4 0Z"/><path stroke-linecap="round" d="M18 10s-3.537 1.5-6 1.5S6 10 6 10m6 2v1.452m0 0a3 3 0 0 0 .476 1.623L15 19m-3-5.548a3 3 0 0 1-.476 1.623L9 19"/></g></svg>
           </td>
         </tr>
