--- a/src/app/admin/components/cbu/cbu.component.html
+++ b/src/app/admin/components/cbu/cbu.component.html
@@ -23,7 +23,7 @@
             maxlength="22"
             inputmode="numeric"
             pattern="[0-9]*"
-            [ngClass]="{'text-teal-500 font-semibold' : !visible, 'text-gray-400' : visible}" class="placeholder:text-gray-400" autocomplete="new-password" type="text" placeholder="" required/>
+            [ngClass]="{'text-teal-500 font-semibold' : !visible, 'text-gray-400' : visible}" class="placeholder:text-gray-400" autocomplete="new-password" type="text" placeholder=""/>
         </label>
         <svg *ngIf="visible" (click)="activatedEdit()" class="ml-2 cursor-pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><g fill="#0891B2"><path d="M15.9 2L3 14.9v5.7h5.7L21.5 7.7zM7.8 18.5H5v-2.8l7.9-7.9l2.8 2.8zm6.5-12.1l1.6-1.6l2.8 2.8l-1.6 1.6z"/><path d="M12 21h8.6v-2H14z" opacity=".5"/></g></svg>
         <!-- <button *ngIf="visible" (click)="activatedEdit()" type="submit" class="mt-4 font-semibold ml-2 text-[0.8rem] text-[#0891B2] cursor-pointer" >
