cambios en beneficios credencial

--- a/src/app/admin/components/card-front/card-front.component.html
+++ b/src/app/admin/components/card-front/card-front.component.html
@@ -36,7 +36,13 @@
           </div>
 
         </div>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="27" height="29.454545454545457" viewBox="0 0 22 24"><path fill="#61788f" d="M13.878 17.986c-.924 2.33-3.15 3.951-5.758 3.968h-.005a6.08 6.08 0 0 1-3.62-10.965l.016-.012l-.355-2.191c-2.499 1.418-4.158 4.06-4.158 7.09a8.124 8.124 0 0 0 15.377 3.663l.021-.046z"/><path fill="#61788f" d="M16.248 15.07a2 2 0 0 0-.234-.194l-.006-.004c-.219-.15-.49-.24-.782-.24H8.895l-.819-5.047h6.758a.994.994 0 1 0 0-1.988H7.752l-.111-.672a1.411 1.411 0 1 0-2.783.47l-.001-.008l1.44 8.825a1.524 1.524 0 0 0 1.446 1.237h6.905l5.409 5.41a1.406 1.406 0 1 0 1.988-1.988zM8.345 2.691a2.691 2.691 0 1 1-5.383 0a2.691 2.691 0 0 1 5.383 0"/></svg>
+        </div>
         <div class="flex">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="29.454545454545457" viewBox="0 0 22 24"><path fill="#61788f" d="M13.878 17.986c-.924 2.33-3.15 3.951-5.758 3.968h-.005a6.08 6.08 0 0 1-3.62-10.965l.016-.012l-.355-2.191c-2.499 1.418-4.158 4.06-4.158 7.09a8.124 8.124 0 0 0 15.377 3.663l.021-.046z"/><path fill="#61788f" d="M16.248 15.07a2 2 0 0 0-.234-.194l-.006-.004c-.219-.15-.49-.24-.782-.24H8.895l-.819-5.047h6.758a.994.994 0 1 0 0-1.988H7.752l-.111-.672a1.411 1.411 0 1 0-2.783.47l-.001-.008l1.44 8.825a1.524 1.524 0 0 0 1.446 1.237h6.905l5.409 5.41a1.406 1.406 0 1 0 1.988-1.988zM8.345 2.691a2.691 2.691 0 1 1-5.383 0a2.691 2.691 0 0 1 5.383 0"/></svg>
+          </div>
           <div routerLink="mensajes" class="mr-2">
             <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#0891B2" d="M3 22q-.825 0-1.412-.587T1 20V7h2v13h15v2zm11-8.35l-7-4.1V16h14V9.55zM7 18q-.825 0-1.412-.587T5 16V7.5q0-.525.238-1t.712-.75L14 1l2 1.175L7.2 7.35l6.8 4l6.75-4q.375-.225.763-.212t.737.212t.55.538t.2.762V16q0 .825-.587 1.413T21 18zm7-8l-2.8-2.8l1.4-1.4L14 7.2l3.55-3.55l1.4 1.4zm0 6h7H7z"/></svg>
           </div>
