--- a/src/app/admin/components/cbu/cbu.component.html
+++ b/src/app/admin/components/cbu/cbu.component.html
@@ -42,5 +42,6 @@
     </div>
   </form>
   <p class="px-5 text-gray-400 text-center text-[0.5rem] ">* Mantenga actualizado su número de cbu, el mismo será utilizado para reintegros y todo trámite que lo requiera. El mismo debe pertenecer al titular de esta credencial.</p>
+  <p class="px-5 text-red-400 font-bold text-center text-[0.5rem] mt-2 ">SIN EL CBU ACTUALIZADO NO PUEDE RECIBIR NINGÚN TIPO DE REINTEGRO</p>
 </div>
 
