--- a/src/app/admin/components/sepelio/sepelio.component.html
+++ b/src/app/admin/components/sepelio/sepelio.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="tieneBeneficio3(); else elseTemplate">
+<ng-container *ngIf="notieneNada(); else elseTemplate">
   <p class="text-[0.7rem] text-cyan-600 font-semibold text-center mt-1">Seguros</p>
 <div class="flex flex-col h-24  overflow-hidden mx-4 mt-1 mb-2">
   <div class="overflow-y-auto flex-grow custom-scrollbar">
@@ -18,10 +18,45 @@
         </tr>
       </thead>
       <tbody class="bg-white divide-y divide-gray-200 mb-2">
-        <tr *ngIf="tieneBeneficio3()" class="hover:bg-gray-50">
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-cyan-600 font-semibold w-[5%]">#</td>
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[30%]">Seguro de sepelio</td>
-          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem]   w-[10%] "><p class="bg-green-600 text-center px-1 rounded-2xl text-white">Contratado</p></td>
+        <tr class="hover:bg-gray-50" >
+          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-cyan-600 font-semibold w-[5%]">1</td>
+          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-gray-500 w-[30%]">Seguro de sepelio</td>
+          <td *ngIf="tieneSeguroSepelio()" class="px-3 py-1 whitespace-nowrap text-[0.5rem]   w-[10%] ">
+            <a class="w-full">
+              <button class="text-white text-[0.5rem] bg-green-600 rounded-2xl px-2 py-1 mt-3 flex items-center justify-center">
+                <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24"><path fill="#ffffff" d="m9.55 18l-5.7-5.7l1.425-1.425L9.55 15.15l9.175-9.175L20.15 7.4z"/></svg>
+                Contratado
+              </button>
+            </a>
+          </td>
+          <td *ngIf="!tieneSeguroSepelio()" class="px-3 py-1 whitespace-nowrap text-[0.5rem]   w-[10%] ">
+            <a class="w-full" href="https://wa.me/+5491126526532?text=hola deseo adherirme a un servicio de la mutual">
+              <button class="cursor-pointer text-white text-[0.5rem] bg-accent rounded-2xl px-2 py-1 mt-3 flex items-center justify-center">
+                <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24"><path fill="#ffffff" d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01A9.82 9.82 0 0 0 12.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.23 8.23 0 0 1 2.41 5.83c0 4.54-3.7 8.23-8.24 8.23c-1.48 0-2.93-.39-4.19-1.15l-.3-.17l-3.12.82l.83-3.04l-.2-.32a8.2 8.2 0 0 1-1.26-4.38c.01-4.54 3.7-8.24 8.25-8.24M8.53 7.33c-.16 0-.43.06-.66.31c-.22.25-.87.86-.87 2.07c0 1.22.89 2.39 1 2.56c.14.17 1.76 2.67 4.25 3.73c.59.27 1.05.42 1.41.53c.59.19 1.13.16 1.56.1c.48-.07 1.46-.6 1.67-1.18s.21-1.07.15-1.18c-.07-.1-.23-.16-.48-.27c-.25-.14-1.47-.74-1.69-.82c-.23-.08-.37-.12-.56.12c-.16.25-.64.81-.78.97c-.15.17-.29.19-.53.07c-.26-.13-1.06-.39-2-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.12-.24-.01-.39.11-.5c.11-.11.27-.29.37-.44c.13-.14.17-.25.25-.41c.08-.17.04-.31-.02-.43c-.06-.11-.56-1.35-.77-1.84c-.2-.48-.4-.42-.56-.43c-.14 0-.3-.01-.47-.01"/></svg>
+                Adherirme
+              </button>
+            </a>
+          </td>
+        </tr>        
+        <tr class="hover:bg-gray-50">
+          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-cyan-600 font-semibold w-[5%]">2</td>
+          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-gray-500 w-[30%]">Seguro de vida</td>
+          <td *ngIf="tieneSeguroVida()" class="px-3 py-1 whitespace-nowrap text-[0.5rem]   w-[10%] ">
+            <a class="w-full">
+              <button class="text-white text-[0.5rem] bg-green-600 rounded-2xl px-2 py-1 mt-3 flex items-center justify-center">
+                <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24"><path fill="#ffffff" d="m9.55 18l-5.7-5.7l1.425-1.425L9.55 15.15l9.175-9.175L20.15 7.4z"/></svg>
+                Contratado
+              </button>
+            </a>
+          </td>
+          <td *ngIf="!tieneSeguroVida()" class="px-3 py-1 whitespace-nowrap text-[0.5rem]   w-[10%] ">
+            <a class="w-full" href="https://wa.me/+5491126526532?text=hola deseo adherirme a un servicio de la mutual">
+              <button class="cursor-pointer text-white text-[0.5rem] bg-accent rounded-2xl px-2 py-1 mt-3 flex items-center justify-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24"><path fill="#ffffff" d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01A9.82 9.82 0 0 0 12.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.23 8.23 0 0 1 2.41 5.83c0 4.54-3.7 8.23-8.24 8.23c-1.48 0-2.93-.39-4.19-1.15l-.3-.17l-3.12.82l.83-3.04l-.2-.32a8.2 8.2 0 0 1-1.26-4.38c.01-4.54 3.7-8.24 8.25-8.24M8.53 7.33c-.16 0-.43.06-.66.31c-.22.25-.87.86-.87 2.07c0 1.22.89 2.39 1 2.56c.14.17 1.76 2.67 4.25 3.73c.59.27 1.05.42 1.41.53c.59.19 1.13.16 1.56.1c.48-.07 1.46-.6 1.67-1.18s.21-1.07.15-1.18c-.07-.1-.23-.16-.48-.27c-.25-.14-1.47-.74-1.69-.82c-.23-.08-.37-.12-.56.12c-.16.25-.64.81-.78.97c-.15.17-.29.19-.53.07c-.26-.13-1.06-.39-2-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.12-.24-.01-.39.11-.5c.11-.11.27-.29.37-.44c.13-.14.17-.25.25-.41c.08-.17.04-.31-.02-.43c-.06-.11-.56-1.35-.77-1.84c-.2-.48-.4-.42-.56-.43c-.14 0-.3-.01-.47-.01"/></svg>
+                Adherirme
+              </button>
+            </a>
+          </td>
         </tr>
       </tbody>
     </table>
