cambios en colores de los iconos de la credencial dependiendo del estado

--- a/src/app/admin/components/sepelio/sepelio.component.html
+++ b/src/app/admin/components/sepelio/sepelio.component.html
@@ -19,8 +19,8 @@
       </thead>
       <tbody class="bg-white divide-y divide-gray-200 mb-2">
         <tr class="hover:bg-gray-50" >
-          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-cyan-600 font-semibold w-[5%]">1</td>
-          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-gray-500 w-[30%]">Seguro de sepelio</td>
+          <td class="px-3 py-1 whitespace-nowrap text-[0.7rem] text-cyan-600 font-semibold w-[5%]">1</td>
+          <td class="px-3 py-1 whitespace-nowrap font-semibold text-[0.7rem] text-green-600 w-[30%]">Seguro de sepelio</td>
           <td *ngIf="tieneSeguroSepelio()" class="px-3 py-1 whitespace-nowrap text-[0.5rem]   w-[10%] ">
             <a class="w-full">
               <button class="text-white text-[0.5rem] bg-green-600 rounded-2xl px-2 py-1 mt-3 flex items-center justify-center">
@@ -37,10 +37,10 @@
               </button>
             </a>
           </td>
-        </tr>        
+        </tr>
         <tr class="hover:bg-gray-50">
-          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-cyan-600 font-semibold w-[5%]">2</td>
-          <td class="px-3 py-1 whitespace-nowrap text-[0.5rem] text-gray-500 w-[30%]">Seguro de vida</td>
+          <td class="px-3 py-1 whitespace-nowrap text-[0.7rem] text-cyan-600 font-semibold w-[5%]">2</td>
+          <td class="px-3 py-1 whitespace-nowrap font-semibold text-[0.7rem] text-fuchsia-600 w-[30%]">Seguro de vida</td>
           <td *ngIf="tieneSeguroVida()" class="px-3 py-1 whitespace-nowrap text-[0.5rem]   w-[10%] ">
             <a class="w-full">
               <button class="text-white text-[0.5rem] bg-green-600 rounded-2xl px-2 py-1 mt-3 flex items-center justify-center">
