--- a/src/app/admin/components/cbu/cbu.component.html
+++ b/src/app/admin/components/cbu/cbu.component.html
@@ -2,7 +2,7 @@
   <p class="text-gray-400"></p>
   <form [formGroup]="form" (ngSubmit)="guardar()" novalidate>
     <fieldset class="fieldset">
-      <div class="flex justify-between items-center mb-2">
+      <div class="flex justify-between items-center mb-1 mt-2">
         <label class="input input-success validator">
            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8" fill="#B0B1B2"/>
                       <text
@@ -41,7 +41,7 @@
     El número de CBU debe tener exactamente 22 dígitos numéricos.
     </div>
   </form>
-  <p class="px-5 text-gray-400 text-center text-[0.5rem] ">* Mantenga actualizado su número de cbu, el mismo será utilizado para reintegros y todo trámite que lo requiera. El mismo debe pertenecer al titular de esta credencial.</p>
+  <p class="px-5 text-cyan-600 font-semibold text-center text-[0.6rem] ">* Mantenga actualizado su número de cbu, el mismo será utilizado para reintegros y todo trámite que lo requiera. El mismo debe pertenecer al titular de esta credencial.</p>
   <p class="px-5 text-red-400 font-bold text-center text-[0.5rem] mt-2 ">SIN EL CBU ACTUALIZADO NO PUEDE RECIBIR NINGÚN TIPO DE REINTEGRO</p>
 </div>
 
