--- a/src/app/admin/components/farmacia/farmacia.component.html
+++ b/src/app/admin/components/farmacia/farmacia.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 <ng-template #elseTemplate>
   <div class="flex flex-col items-center justify-center max-h-28 min-h-28 px-5">
-    <p class="text-center text-[0.7rem] text-gray-400">Usted cuenta con este beneficio, para más información comuníquese por whatsapp al 11-58558733
+    <p class="text-center text-[0.7rem] text-green-600 font-semibold">Usted cuenta con este beneficio, para más información comuníquese por whatsapp al 11-58558733
 
 
     </p>
