--- a/src/app/admin/components/encuesta/encuesta.component.html
+++ b/src/app/admin/components/encuesta/encuesta.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="calificado; else elseTemplate">
   <div class="flex flex-col justify-center items-center h-32">
-  <p class="text-gray-400 text-xs">¿Cómo califica esta propuesta de credencial (CDI)?</p>
+  <p class="text-gray-400 text-xs">¿Cómo calificaría la Credencial Digital (CDI)?</p>
   <div class="flex space-x-1 cursor-pointer">
     <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
       <svg
