--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -96,7 +96,7 @@
                     >
                       <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24">
                         <path
-                          [attr.fill]="rlaMsg1.isActive ? '#00BC7D' : '#61788f'"
+                          [attr.fill]="rlaMsg1.isActive ? '#00C56D' : '#00BC7D'"
                           d="M21 15.26a1 1 0 0 0-1 1v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9.67l5.88 5.89a3 3 0 0 0 2.1.87a3 3 0 0 0 1.43-.36a1 1 0 0 0 .4-1.36a1 1 0 0 0-1.36-.4a1 1 0 0 1-1.15-.17L5.41 8.26H12a1 1 0 0 0 0-2H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3v-3a1 1 0 0 0-1-1m0-12h-5a1 1 0 0 0-1 1v8a1 1 0 0 0 1.57.82l1.93-1.29l1.91 1.28a1.06 1.06 0 0 0 .59.19a1 1 0 0 0 .41-.09a1 1 0 0 0 .59-.91v-8a1 1 0 0 0-1-1m-1 7.12l-.94-.63a1 1 0 0 0-1.12 0l-.94.63V5.26h3Z"
                         />
                       </svg>
@@ -113,7 +113,7 @@
                     >
                       <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24">
                         <path
-                          [attr.fill]="rlaMsg2.isActive ? '#0891B2' : '#61788f'"
+                          [attr.fill]="rlaMsg2.isActive ? '#0891B2' : '#00B8DA'"
                           d="M3 22q-.825 0-1.412-.587T1 20V7h2v13h15v2zm11-8.35l-7-4.1V16h14V9.55zM7 18q-.825 0-1.412-.587T5 16V7.5q0-.525.238-1t.712-.75L14 1l2 1.175L7.2 7.35l6.8 4l6.75-4q .375-.225 .763-.212t .737 .212t .55 .538t .2 .762V16q0 .825-.587 1.413T21 18zm7-8l-2.8-2.8l1.4-1.4L14 7.2l3.55-3.55l1.4 1.4zm0 6h7H7z"
                         />
                       </svg>
