changed in the prcess of changed password

--- a/src/app/admin/components/notifications/notifications.component.css
+++ b/src/app/admin/components/notifications/notifications.component.css
@@ -28,9 +28,7 @@
   -webkit-overflow-scrolling: touch;
   touch-action: pan-y;
   overscroll-behavior-y: contain;
-}
-
-.custom-scrollbar-modal::-webkit-scrollbar {
+}.custom-scrollbar-modal::-webkit-scrollbar {
   width: 6px;
 }
 
